# statement-processor

./: .dockerignore  .gitignore  .ruff.toml  AGENTS.md  Makefile  README.md  app.py  extraction.py  flag_outliers.py  get_statement_table_headings.py  main.py  normalisation.py  pyproject.toml  requirements.txt  statement_processor.py  update_dependencies.sh  validation.py
.claude/rules/: browser-testing.md  deployment.md  documentation.md  frontend.md  index.md  project.md  python-style.md  security.md  testing.md
agent_docs/: browser_testing.md  documentation.md  frontend.md  project.md  python_style.md  security.md  testing.md
cdk/: app.py  deploy_stack.sh  requirements.txt
common/: setup.py
configuration/: config.py
core/: create_json_statements.py  extract_text_from_pdf.py  normalisation.py
lambda_functions/textraction_lambda/: Dockerfile  config.py  exceptions.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  update_dependencies.sh
lambda_functions/textraction_lambda/core/: billing.py  date_utils.py  extraction.py  extraction_prompt.md  get_contact_config.py  models.py  statement_processor.py  textract_statement.py  transform.py
lambda_functions/textraction_lambda/core/validation/: anomaly_detection.py  validate_item_count.py
lambda_functions/textraction_lambda/tests/: conftest.py  helpers.py  test_anomaly_detection.py  test_extraction.py  test_extraction_integration.py  test_flag_detection.py  test_item_count_validation.py  test_main.py  test_processing_progress.py
new-design/: about.html  index.html  instructions.html  styles.css
plans/: 02-replace-textract-production.md
service/: .dockerignore  AGENTS.md  Dockerfile  Dockerfile-slim  Dockerfile.alpine  app.py  architecture-diagram.md  banner_service.py  billing_service.py  cache_provider.py  config.py  exceptions.py  logger.py  main.py  nginx-routes.conf  nginx.conf  nginx_route_config_generator.py  nginx_route_overrides.json  nginx_route_querystring_allow_list.json  oauth_client.py  pricing_config.py  pyproject.toml  repository_helpers.py  requirements-dev.txt  requirements.txt  routes.py  run_as_container.sh  start.sh  statement_view_cache.py  stripe_repository.py  stripe_service.py  stripe_webhook_handler.py  sync.py  temp_add_config_to_ddb.py  tenant_activation.py  tenant_billing_repository.py  tenant_data_repository.py  update_dependencies.sh  utils.py  utils_auth.py  (+6 more)
templates/: base.html  index.html  invoices.html
tests/: compare_json_statements.py  compare_textraction.py
utils/: aws.py  json_statement_helpers.py
(+306 files in other folders)
